--- a/administracao/templates/administracao/exportar.html
+++ b/administracao/templates/administracao/exportar.html
@@ -52,17 +52,23 @@
             <td><a href="{% url 'export' 'projetos' 'json'%}">JSON</a></td>
         </tr>
         <tr>
-            <td>Organizacoes</td>
+            <td>Organizações</td>
             <td><a href="{% url 'export' 'organizacoes' 'csv'%}">CSV</a></td>
             <td><a href="{% url 'export' 'organizacoes' 'xls'%}">XLS</a></td>
             <td><a href="{% url 'export' 'organizacoes' 'json'%}">JSON</a></td>
             
         </tr>
         <tr>
-            <td>Opcoes</td>
+            <td>Opções</td>
             <td><a href="{% url 'export' 'opcoes' 'csv'%}">CSV</a></td>
             <td><a href="{% url 'export' 'opcoes' 'xls'%}">XLS</a></td>
             <td><a href="{% url 'export' 'opcoes' 'json'%}">JSON</a></td>
+        </tr>
+        <tr>
+            <td>Avaliações</td>
+            <td><a href="{% url 'export' 'avaliacoes' 'csv'%}">CSV</a></td>
+            <td><a href="{% url 'export' 'avaliacoes' 'xls'%}">XLS</a></td>
+            <td><a href="{% url 'export' 'avaliacoes' 'json'%}">JSON</a></td>
         </tr>
         <tr>
             <td>Usuários</td>
