--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -6,7 +6,7 @@
 
 {% comment %} Seletor da edição da pesquisa {% endcomment %}
 {% if edicoes %}
-  <div class="row align-items-start mb-2">
+  <div class="row align-items-start mb-2" style="display: inline-block;">
     <div class="ml-3">
       <div class="input-group input-group-sm">
         {% if not sem_edicao %}
