--- a/propostas/templates/propostas/mapeamento_estudante_projeto.html
+++ b/propostas/templates/propostas/mapeamento_estudante_projeto.html
@@ -53,6 +53,26 @@
 
   </style>
 
+<style>
+    .arrow {
+      border: solid black;
+      border-width: 0px 2px 2px 0px;
+      display: inline-block;
+      padding: 2px;
+      vertical-align: middle;
+    }
+
+    .right {
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+    }
+
+    #toggle {
+      display:inline-block; 
+    }
+
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -64,10 +84,19 @@
     {% include "edicoes.html" %}
   {% endwith %}
   
-  &nbsp;&nbsp;
-  <b>Informações: </b>&nbsp;
-  <label><input id="curso" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(2)').show() : $('#MapeamentoTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
-  <label><input id="cr" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(3)').show() : $('#MapeamentoTable tr > *:nth-child(3)').hide())" type="checkbox"         /> CR</label>&nbsp;&nbsp;&nbsp;
+  <script>
+    $(document).on('click','#informacoes_tag',function(){
+      $( "#toggle" ).toggle( "slide" );
+    });
+  </script>
+  
+  <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
+    <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
+    <div id="toggle" style="display: none; height: 1em;">
+      <label><input id="curso" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(2)').show() : $('#MapeamentoTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="cr" onchange="($(this).prop('checked') ? $('#MapeamentoTable tr > *:nth-child(3)').show() : $('#MapeamentoTable tr > *:nth-child(3)').hide())" type="checkbox"         /> CR</label>&nbsp;&nbsp;&nbsp;
+    </div>
+  </span>
 
   <div class="atualizar">
     
