mostra procura proposta

--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -95,7 +95,40 @@
     {% for proposta in propostas %}   
       <div id="proposta{{proposta.id}}" class="proposta" data-propostaid="{{proposta.id}}">
         <div id="titulo{{proposta.id}}" class="etiqueta_proposta">
-          <a target="_blank" rel="noopener noreferrer" class="ancora" href="{% url 'proposta_completa' proposta.id %}" style="color: #000062;">{{proposta.titulo}}</a>&nbsp;
+          <a target="_blank" rel="noopener noreferrer" class="ancora" href="{% url 'proposta_completa' proposta.id %}" style="color: #000062;"
+          data-toggle="tooltip" data-html="true" animation="true" title="
+                {% for opcaop in proposta.opcao_set.all %}
+                  {% with alocacoes=opcaop.aluno.alocacao_set %}
+                    {% if alocacoes.count %}
+                      {% if opcaop.proposta == alocacoes.last.proposta %}
+                        <u>
+                        {% if opcaop.aluno %}
+                          {{opcaop.aluno.user.get_full_name}} [{{opcaop.aluno.get_curso_display}}]
+                        {% endif %}
+                        #{{ opcaop.prioridade }}
+                        </u>
+                      {% else %}
+                        {% if opcaop.aluno %}
+                          {{opcaop.aluno.user.get_full_name}} [{{opcaop.aluno.get_curso_display}}]
+                        {% endif %}
+                        #{{ opcaop.prioridade }}
+                      {% endif %}
+                    {% else %}
+                      {% if opcaop.aluno %}
+                        {{opcaop.aluno.user.get_full_name}} [{{opcaop.aluno.get_curso_display}}]
+                      {% endif %}
+                      #{{ opcaop.prioridade }}
+                    {% endif %}
+                    |{% mede_aderencia opcaop.aluno proposta %}%|<br>
+                  {% endwith %}
+                {% empty %}
+                  Nenhum aluno escolheu essa proposta
+                {% endfor %}
+                "            
+              >
+          
+          {{proposta.titulo}}
+          </a>&nbsp;
           {% if proposta.organizacao and proposta.organizacao.nome %}
             <a class="ancora" href="{% url 'organizacao_completo' proposta.organizacao.id %}" style="color: darkblue;">
               ({{ proposta.organizacao.nome }})
@@ -163,15 +196,29 @@
           Estudante não escolheu opções de proposta de projetos
         {% endfor %}  
         ">
-        {{estudante.user.get_full_name}}</a><br>
+        <span id="nome{{estudante.id}}">{{estudante.user.get_full_name}}</span></a>
+        <span style="float: right;">opção #<span id="opcao{{estudante.id}}">1</span></span><br>
       [{{estudante.get_curso}}]&nbsp;&nbsp;&nbsp;CR:&nbsp;{{estudante.cr}}
       </div>
       `);
       {% if estudante.pre_alocacao %}
-        console.log("PRE{{estudante.id}}");
-        console.log($("#estudante{{estudante.id}}"));
+
+        var proposta = {{estudante.pre_alocacao.id}};
+        var opcao = "X";
+      
+        prioridades = $("#estudante{{estudante.id}}").data("prioridades")
+        if (prioridades !== undefined) {
+          for (var i = 0; i < prioridades.length; ++i) {
+            if(prioridades[i]==proposta) {
+              opcao = i+1;
+              break
+            }
+          }
+        }
+
+        $("#opcao{{estudante.id}}").html(opcao);
+
         cor_estudante($("#estudante{{estudante.id}}"), {{estudante.pre_alocacao.id}})
-        console.log("POS");
       {% endif %}
     {% endfor %}
 
