--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -24,7 +24,7 @@
         .titulo {display: inline;}
     </style>
     <span class="titulo">Projeto: {{projeto.titulo_final}}</span>
-    <br><i>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</i><br>
+    <br><i>&nbsp;&nbsp;&nbsp;&nbsp;Título original: {{projeto.titulo}}</i><br>
   {% else %}
     <span style="display:block;" class="titulo">Projeto: {{projeto.titulo}}</span>
   {% endif %}
