--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -35,7 +35,7 @@
      Título do projeto.
     ">
       Título: {{projeto.titulo_final}}</span>
-    <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</small><br>
+    <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título original: {{projeto.titulo}}</small><br>
   {% elif projeto.titulo %}
     <span class="titulo" data-toggle="tooltip" data-html="true" animation="true" title="
      Título do projeto.
