--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -113,7 +113,7 @@
         <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}" class="dark-blue-bold"> 
           {% if projeto.titulo_final %}
             {{projeto.titulo_final}}<br>
-            <small>Título Provisório: {{projeto.titulo}}</small><br>
+            <small>Título original: {{projeto.titulo}}</small><br>
           {% else %}
             {{projeto.titulo}}<br>
           {% endif %}
