--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -21,9 +21,8 @@
 
     <hr>
     <a href="{% url 'exportar' %}"><h5>Relatórios/Exportar dados</h5></a>
-    <a href="{% url 'montar_grupos' %}"><h5>Montar Grupos para Projetos</h5></a>
-    <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
     <a href="{% url 'index_carregar' %}"><h5>Carregar dados</h5></a>
     <a href="{% url 'conexoes_estabelecidas' %}"><h5>Usuários Conectados</h5></a>
+    <a href="{% url 'logs' %}"><h5>Logs Conectados</h5></a>
 
 {% endblock %}
