--- a/propostas/templates/propostas/index_propostas.html
+++ b/propostas/templates/propostas/index_propostas.html
@@ -14,6 +14,8 @@
         <a href="{% url 'estudantes_inscritos' %}"><li>Estudantes Inscritos no Semestre</li></a>
         <a href="{% url 'procura_propostas' %}"><li>Procura pelas Propostas</li></a>
         <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas de Projetos</li></a>
+        <a href="{% url 'propor' %}"><li>Propor Grupos para Projetos</li></a>
+        <a href="{% url 'montar_grupos' %}"><li>Montar Grupos para Projetos</li></a>
     </ul>
     
 {% endblock %}
