--- a/propostas/templates/propostas/propostas_apresentadas.html
+++ b/propostas/templates/propostas/propostas_apresentadas.html
@@ -155,6 +155,7 @@
             <th scope="row">
             
               <a href="{% url 'proposta_completa' proposta.id %}"
+                target="_blank" rel="noopener noreferrer"
                 data-toggle="tooltip" data-html="true" animation="true" title="
                 {% for opcaop in proposta.opcao_set.all %}
                   {% with alocacoes=opcaop.aluno.alocacao_set %}
