--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -153,6 +153,11 @@
     <input type="submit" name="fechar" value="Fechar Projetos" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
   </form>
 
+  <br><br>
+  Propostas Balanceadas: <span id="balanceadas">-</span><br>
+  Propostas Desbalanceadas: <span id="desbalanceadas">-</span><br>
+  Propostas Vazias: <span id="vazias">-</span><br>
+
   <p>&nbsp;</p>
 
   <script>
@@ -227,6 +232,32 @@
       return "SALVAR ESTADO!";
     }
 
+    
+    function atualizar_count_propostas() {
+
+      var balanceadas = 0;
+      var desbalanceadas = 0;
+      var vazias = 0;
+
+      var propostas = $('.proposta');
+      for (var i = 0; i < propostas.length; i++) {
+        qtd_estudantes = $(propostas[i]).children('div').length - 1
+        if(qtd_estudantes == 0) {
+            vazias += 1;
+        } else if(qtd_estudantes > 4 || qtd_estudantes < 3) {
+            desbalanceadas += 1;
+        }
+        else {
+            balanceadas += 1;
+        }
+      }
+
+      $("#desbalanceadas").html(desbalanceadas);
+      $("#balanceadas").html(balanceadas);
+      $("#vazias").html(vazias);
+
+    }
+
     function colorir_proposta(target) {
         qtd_estudantes = $(target).children('div').length - 1
         if(qtd_estudantes == 0) {
@@ -237,6 +268,7 @@
         else {
             $(target).css("background-color", "lime");
         }
+        atualizar_count_propostas();
     }
 
     var observer_proposta = new MutationObserver(function( mutations ) {
@@ -250,6 +282,8 @@
     var config = { 
         childList: true
     };
+
+
 
     var propostas = $('.proposta');
     for (var i = 0; i < propostas.length; i++) {
