--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -107,7 +107,14 @@
       <p>Não existem parceiros cadastradas para essa organização.</p>
     {% endif %}
 
-    <input type="submit" value="Seleciona Conexões">
+    <small><button onclick="location.href='{% url "cadastrar_usuario" %}?tipo=parceiro&organizacao={{projeto.organizacao.id}}'" type="button" style="float: right;">
+      Cadastrar Novo Parceiro
+    </button></small>
+
+    <input type="submit" value="Fechar Conexões">
+
+    &nbsp;&nbsp;
+
 
     <p>&nbsp;</p>    
   </form>
