--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -105,7 +105,7 @@
               {% elif contato.tipo_de_retorno == 3 %}
                 "background-color:pink" {% comment %} (3, 'Não vai enviar proposta de projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 4 %}
-                "background-color:yellow" {% comment %} (4, 'Confirmamos um grupo de alunos para o projeto'), {% endcomment %}
+                "background-color:yellow" {% comment %} (4, 'Confirmamos um grupo de estudantes para o projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 5 %}
                 "background-color:#e289df" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'),
               {% elif contato.tipo_de_retorno == 6 %}
