--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -60,6 +60,12 @@
       color:darkred;
     }
 
+    .event-descricao {
+      font-size: 0.8em;
+      color:darkblue;
+    }
+
+
     .semestre1 {
       border-radius: 5px 0px 0px 5px;
       padding: 4px 9px; 
@@ -364,6 +370,13 @@
                           </div>
                       </div>
                       <div class="form-group row">
+                          <label for="event-descricao" class="col-sm-4 control-label">Descrição:</label>
+                          <div class="col-sm-8">
+                              {% comment %} <input id="event-descricao" name="event-descricao" type="text" class="form-control"> {% endcomment %}
+                              <textarea class="form-control" id="event-descricao" name="event-descricao" rows="3"></textarea>
+                          </div>
+                      </div>
+                      <div class="form-group row">
                           <label for="event-observation" class="col-sm-4 control-label">Obs:</label>
                           <div class="col-sm-8">
                               <input id="event-observation" name="event-observation" type="text" class="form-control">
@@ -436,6 +449,7 @@
       //$('#event-modal input[name="event-name"]').val(evento ? evento.name : '');
       $('#event-modal select[name="event-type"]').val(evento ? evento.type : '');
       $('#event-modal input[name="event-location"]').val(evento ? evento.location : '');
+      $('#event-modal textarea[name="event-descricao"]').val(evento ? evento.descricao : '');
       $('#event-modal input[name="event-observation"]').val(evento ? evento.observation : '');
       $('#event-modal input[name="event-start-date"]').datepicker('update', evento ? evento.startDate : '');
       $('#event-modal input[name="event-end-date"]').datepicker('update', evento ? evento.endDate : '');
@@ -453,8 +467,10 @@
       
       $.ajax({
         url: '{% url "remove_evento" %}',
+        type: "POST",
         data: { 
           id : event.id,
+          'csrfmiddlewaretoken': '{{ csrf_token }}'
         },
         dataType: 'json',
         success: function (data) {
@@ -478,6 +494,7 @@
         //type: $('#event-modal input[name="event-type"]').val(),
         type: $('#event-modal select[name="event-type"] option:selected').val(),
         location: $('#event-modal input[name="event-location"]').val(),
+        descricao: $('#event-modal textarea[name="event-descricao"]').val(),
         observation: $('#event-modal input[name="event-observation"]').val(),
         startDate: $('#event-modal input[name="event-start-date"]').datepicker('getDate'),
         endDate: $('#event-modal input[name="event-end-date"]').datepicker('getDate'),
@@ -502,13 +519,16 @@
 
       $.ajax({
         url: '{% url "atualiza_evento" %}',
+        type: "POST",
         data: { 
           id : id,
           type : event.type,
           location : event.location,
+          descricao : event.descricao,
           observation : event.observation,
           startDate : startDate,
-          endDate : endDate
+          endDate : endDate,
+          'csrfmiddlewaretoken': '{{ csrf_token }}'
         },
         dataType: 'json',
         success: function (data) {
@@ -521,6 +541,7 @@
                   dataSource[i].name = event.name;
                   dataSource[i].type = event.type;
                   dataSource[i].location = event.location;
+                  dataSource[i].descricao = event.descricao;
                   dataSource[i].observation = event.observation;
                   dataSource[i].startDate = event.startDate;
                   dataSource[i].endDate = event.endDate;
@@ -537,6 +558,9 @@
             calendar.setDataSource(dataSource);
             $('#event-modal').modal('hide');
           }
+        },
+        error: function(response) {
+            console.log('error')
         }
       });
 
@@ -551,6 +575,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -563,6 +588,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -575,6 +601,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -587,6 +614,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -600,6 +628,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -613,6 +642,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -630,6 +660,7 @@
                 name: "{{evento.get_title}}",
                 location: "{{evento.location}}",
                 observation: "{{evento.observacao}}",
+                descricao: `{{evento.descricao}}`,
                 type: "{{evento.tipo_de_evento}}",
                 startDate: new Date({{evento.startDate.year}},{{evento.startDate.month|add:-1}},{{evento.startDate.day}}),
                 endDate: new Date({{evento.endDate.year}},{{evento.endDate.month|add:-1}},{{evento.endDate.day}}),
@@ -721,6 +752,9 @@
                 '<div class="event-name">&#8226; ' + e.events[i].name + '</div>';
                 if (e.events[i].location) {
                   content += '<div class="event-location">' + "Local: " + e.events[i].location + '</div>'
+                }
+                if (e.events[i].descricao) {
+                  content += '<div class="event-descricao">' + "Descrição:<br>" + e.events[i].descricao.replace(/(?:\r\n|\r|\n)/g, '<br>') + '</div>'
                 }
                 if (e.events[i].observation) {
                   content += '<div class="event-observation">' + "Obs: " + e.events[i].observation + '</div>'
