abre link em outras janelas

--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -130,7 +130,7 @@
 
             {% if banca.link %}
               <span class="link">
-                <b>Link vídeo-conferência:</b> <small><a href="{{banca.link}}"><span style="word-break: break-all;">{{banca.link}}</span></a></small>
+                <b>Link vídeo-conferência:</b> <small><a target="_blank" rel="noopener noreferrer" href="{{banca.link}}"><span style="word-break: break-all;">{{banca.link}}</span></a></small>
                 <br>
               </span>
             {% endif %}
