--- a/documentos/templates/documentos/index_documentos.html
+++ b/documentos/templates/documentos/index_documentos.html
@@ -54,7 +54,7 @@
     {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} <!-- Professor ou Adm -->
         <hr>
         <h5>Área do Professor</h5>
-        <a href="{% url 'tabela_documentos' %}"><h5>Tabelas de Documentação dos Projetos Fechados</h5></a>
+        <a href="{% url 'tabela_documentos' %}"><h5>Tabelas de Documentação dos Projetos</h5></a>
         <a href="{% url 'tabela_atas' %}"><h5>Atas do Comitê</h5></a>
         {% if manual_bancas %}
             <a href="../..{{MEDIA_URL}}{{manual_bancas.documento}}"><h5>Manual de Participação em Bancas</h5></a>
