--- a/documentos/templates/documentos/certificado_orientador.html
+++ b/documentos/templates/documentos/certificado_orientador.html
@@ -101,7 +101,7 @@
       {{alocacao.aluno.user.get_full_name}}
       ({{alocacao.aluno.get_curso_completo}}){% if forloop.last %}.{% else %},{% endif %}
     {% empty %}
-      SEM ALUNOS
+      SEM ESTUDANTES
     {% endfor %}
     <br>
 
