listagem de medias por projeto

--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -28,7 +28,7 @@
     <ul>
         <a href="{% url 'objetivos_rubricas' %}"><li>Objetivos de Aprendizado e Rubricas</li></a>
         <a href="{% url 'estudantes_notas' %}"><li>Resultados das Avaliações dos Estudantes</li></a>
-        <a href="{% url 'resultado_bancas' %}"><li>Resultado Bancas</li></a>
+        <a href="{% url 'resultado_projetos' %}"><li>Resultados por Projeto</li></a>
         <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
         <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
         <a href="{% url 'analise_objetivos' %}"><li>Análise por Objetivos de Aprendizado</li></a>
