--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -39,7 +39,7 @@
 
   {% include "impressora.html" %}
 
-  <span class="titulo">Resultado das Bancas</span>
+  <span class="titulo">Resultado dos Projetos</span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
@@ -68,20 +68,25 @@
         <th style="border-right:0px; border-left:0px;"></th>
         <th style="border-right:0px; border-left:0px;"></th>
         <th style="border-right:0px; border-left:0px;"></th>
+        <th colspan="2" class="text-center">
+          <b>Relatórios</b>
+        </th>
         <th colspan="3" class="text-center">
-        <b>Bancas</b>
+          <b>Bancas</b>
         </th>
       </tr>
       <tr>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Intermediária">Inte.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(7)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(8)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
       </tr>      
 
-      {% for projeto, banca_intermediaria, banca_final, banca_falconi in tabela %} 
+      {% for projeto, relatorio_intermediario, relatorio_final, banca_intermediaria, banca_final, banca_falconi in tabela %} 
       <tr class="item"
         {% if banca_falconi.2 >= 8 and banca_intermediaria.2 >= 7 and banca_final.2 >= 7 %}
           style="background-color:lightgreen"
@@ -123,6 +128,26 @@
                 Orientador não definido
               {% endif %}
           </td>
+
+          <td class="text-center" style="white-space: nowrap;">
+            <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}"
+              {% if relatorio_intermediario.1 %}
+                data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_intermediario.1 }}"
+              {% endif %}
+              >
+              {{ relatorio_intermediario.0|safe }}
+            </a>
+          </td>
+          <td class="text-center" style="white-space: nowrap;">
+            <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}"
+              {% if relatorio_final.1 %}
+                data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_final.1 }}"
+              {% endif %}
+              >
+              {{ relatorio_final.0|safe }}
+            </a>
+          </td>
+
           <td class="text-center" style="white-space: nowrap;">
             <a class="imprimir" href="{% url 'conceitos_obtidos' projeto.id %}"
               {% if banca_intermediaria.1 %}
@@ -179,7 +204,7 @@
         var edicao = $(".filter option:selected").attr("value");
         $.ajax({
             type: "POST",
-            url: "{% url 'resultado_bancas' %}",
+            url: "{% url 'resultado_projetos' %}",
             data: {
                 edicao: edicao,
                 'csrfmiddlewaretoken': '{{ csrf_token }}',
