--- a/templates/base.html
+++ b/templates/base.html
@@ -68,10 +68,8 @@
       <i class="fa fa-bars" aria-hidden="true"></i>
     </a>
   </div>
-  <div class="container-fluid">
-    <br>
+  <div style="margin-top: 6px;" class="container-fluid">
     {% block content %}{% endblock %}
-    <br>
   </div>
 </body>
 </html>
