--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -98,7 +98,7 @@
             <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
             {{projeto.get_titulo}}<br>
             </a>
-            <ul class="grupo">
+            <ul class="grupo" style="margin-bottom: 6px;">
               {% for alocacao in projeto.alocacao_set.all %}
                 <li>
                   <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
