--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -24,13 +24,13 @@
         vertical-align: top;
     }
 
-    @media only screen and (max-width: 1000px) {
+    @media only screen and (max-width: 1100px) {
       table, th, td {
         font-size: 14px;
       }
     }
 
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
       table, th, td {
         font-size: 12px;
       }
@@ -38,6 +38,33 @@
         display:none;
       }
     } 
+
+    @media only screen and (max-width: 800px) {
+      table, th, td {
+        font-size: 14px;
+      }
+
+      tbody {
+        display: flex;
+      }
+
+      tr {
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      th, td {        
+        flex-basis: 100%;
+        height: calc(130px - 5vw);;
+      }
+
+    }
+
+    @media only screen and (max-width: 500px) {
+      table, th, td {
+        font-size: 12px;
+      }
+    }
 
   </style>
 
